# ragdocmanager3

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test
docs/architecture/: containers.puml  system.puml
src/rag_doc_manager/: main.py
src/rag_doc_manager/api/routes/: documents.py  registration.py  search.py
src/rag_doc_manager/customer_manager/: remote_customer_schema_manager.py
src/rag_doc_manager/customer_manager/data_models/: default_index_schema.json  models.py
src/rag_doc_manager/document_manager/: azure_document_manager.py  base.py  contracts.py
src/rag_doc_manager/document_manager/data_models/: models.py
src/rag_doc_manager/document_processor/: processor.py
src/rag_doc_manager/document_processor/chunkers/: chunker.py  factory.py
src/rag_doc_manager/document_processor/document_loaders/: base.py  factory.py
src/rag_doc_manager/document_processor/embedders/: base.py  factory.py
src/rag_doc_manager/document_processor/processing_utils/: utils.py
src/rag_doc_manager/index/: base.py
src/rag_doc_manager/index/adaptors/: azure_ai_indexing_engine.py
src/rag_doc_manager/index/data_models/: models.py
src/rag_doc_manager/index_manager/: index_manager.py
src/rag_doc_manager/index_manager/data_models/: models.py
src/rag_doc_manager/search/: __init__.py  base.py  factory.py
src/rag_doc_manager/search/adaptors/: __init__.py  azure_ai_query_engine.py
src/rag_doc_manager/storage/database_manager/: cosmosdb_manager.py
src/rag_doc_manager/storage/history/: base.py
src/rag_doc_manager/utils/: io.py
(+5 files in other folders)
